# yucca

./: .gitignore  README.md  env_vars.env  pyproject.toml  setup.cfg  setup.py
.github/workflows/: black.yml  format.yml  lint.yml  pytest.yml  python-app.yml  stale.yml
lightning_logs/version_1/: hparams.yaml
tests/: conftest.py  test_configurations.py  test_configurator.py  test_end_to_end.py  test_functional.py  test_infinite_random_batch_sampler.py  test_manager.py  test_networks.py  test_paths.py  test_training.py
tests/data/Task000_Test/: split.pkl  splits.pkl
yucca/: __init__.py  inspect-ckpt-plans.ipynb  paths.py
yucca/_pyinstaller/: hook-yucca.py
yucca/augmentation/: YuccaAugmentationComposer.py
yucca/augmentation/transforms/: BiasField.py  Blur.py  Gamma.py  Ghosting.py  Masking.py  Mirror.py  Noise.py  Ringing.py  SimulateLowres.py  Spatial.py  copy_image_to_label.py  cropping_and_padding.py  formatting.py  normalize.py  sampling.py
yucca/callbacks/: loggers.py
yucca/configuration/: configure_callbacks.py  configure_checkpoint.py  configure_input_dims.py  configure_paths.py  split_data.py
yucca/data/: YuccaDataset.py  samplers.py
yucca/data/alternative_datasets/: YuccaDataset_1modality.py
yucca/data/augmentation/: YuccaAugmentationComposer.py  augmentation_presets.py
yucca/data/data_modules/: YuccaDataModule.py  __init__.py
yucca/data/datasets/: YuccaCompressedDataset.py  YuccaDataset.py
yucca/data_loading/: YuccaDataModule.py  YuccaDataset.py
yucca/data_loading/alternative_datasets/: YuccaDataset_1modality.py
yucca/deprecated/: YuccaLoader.py  YuccaManager.py  YuccaPreprocessor_MultiTask.py  base_manager.py  run_training_OLD.py
yucca/documentation/: functional_template.ipynb  results.md  training_times.md
yucca/documentation/guides/: FAQ.md  changing_parameters.md  changing_pipeline_parameters.md  classification.md  compression.md  ensembles.md  environment_variables.md  label_regions.md  run_scripts_advanced.md  task_conversion.md  unsupervised.md
yucca/documentation/illustrations/: augmentation_illustrations.ipynb  end_to_end_diagram_raw.drawio  learning_rate_schedulers.ipynb  yucca_diagram.drawio
yucca/documentation/templates/: functional_inference.ipynb  functional_inference.py  functional_preprocessing.ipynb  functional_preprocessing.py  functional_training.ipynb  functional_training.py  template_config.py
yucca/documentation/tutorials/: FAQ.md  changing_parameters.md  environment_variables.md  run_scripts_advanced.md  task_conversion.md
yucca/evaluation/: YuccaEvaluator.py  confusion_matrix.py  loggers.py  metrics.py  obj_metrics.py  surface_metrics.py  training_metrics.py  wandb_production_monitoring.py
yucca/evaluation/challenge_evaluation_scripts/: isles_eval.py
yucca/evaluation/challenge_preparation_scripts/: prepare_decathlon.py
yucca/evaluation/deepmind_surface_distance/: lookup_tables.py  metrics.py
yucca/evaluation/paper_specific_scripts/: get_foreground_intensity_stats_for_3BL_paper.py  get_stats_for_3BL_paper.py  plot_example_segs_3BL_paper.py
yucca/functional/: __init__.py  planning.py  preprocessing.py  transpose.py
yucca/functional/array_operations/: __init__.py  bounding_boxes.py  collate.py  cropping_and_padding.py  normalization.py
yucca/functional/evaluation/: __init__.py  confusion_matrix.py  evaluate_folder.py  obj_metrics.py  surface_metrics.py
yucca/functional/testing/: __init__.py
yucca/functional/transforms/: __init__.py  bias_field.py  blur.py  croppad.py  gamma.py  label_transforms.py  masking.py  motion_ghosting.py  noise.py  ringing.py  sampling.py  skeleton.py  spatial.py
yucca/functional/utils/: __init__.py  dict.py  files_and_folders.py  (+6 more)
yucca/image_processing/: BoundingBox.py  cropping_and_padding.py  matrix_ops.py
yucca/lightning_modules/: BaseLightningModule.py  YuccaLightningModule.py  YuccaLightningModule_onehot_labels.py  YuccaThinLightningModule.py
yucca/managers/: YuccaManager.py
yucca/metrics/: BoundingBox.py
yucca/planning/: ClassificationPlanner.py  YuccaPlanner.py  dataset_properties.py
yucca/preprocessing/: ClassificationPreprocessor.py  UnsupervisedPreprocessor.py  UnsupervisedPreprocessorUnitSpacing.py  YuccaPreprocessor.py  YuccaPreprocessor_CLS.py  YuccaPreprocessor_MultiTask.py  YuccaPreprocessor_NoLabel.py  __init__.py  normalization.py
yucca/run/: run_PLtraining.py  run_ensemble.py  run_evaluation.py  run_finetune.py  run_inference.py  run_lightning_training.py  run_preprocessing.py  run_task_conversion.py  run_training.py
yucca/task_conversion/: Task000_TEST.py  Task000_TEST_CLASSIFICATION.py  Task000_TEST_SEGMENTATION.py  Task001_OASIS.py  Task002_LPBA40.py  Task002_WMH_Flair_and_T1.py  Task003_Hammers.py  Task003_WMH_Flair.py  Task004_HarP.py  Task004_USBreast.py  Task005_ISLES22.py  Task005_LPBA40.py  Task006_Hammers.py  Task006_WMH_Flair.py  Task007_HarP.py  Task007_WMH_T1.py  Task008_BONBID23.py  Task008_WMH.py  Task009_BONBID23_ADC.py  Task010_AMOS22.py  Task011_MSSEG1.py  Task012_BraTS21.py  Task014_MBAS24.py  Task021_BrainTumour.py  Task021_Decathlon_BrainTumour.py  Task022_Heart.py  Task023_Decathlon_Liver.py  Task023_Liver.py  Task024_Hippocampus.py  Task025_Prostate.py  Task026_Lung.py  Task027_Pancreas.py  Task028_Decathlon_HepaticVessel.py  Task028_HepaticVessel.py  Task029_Spleen.py  Task030_Colon.py  Task031_DC_BrainTumour.py  Task031_PPMI.py  Task032_DC_Heart.py  Task033_DC_Liver.py  (+62 more)
yucca/training/: __init__.py
yucca/utils/: files_and_folders.py  loading.py  nib_utils.py  saving.py  task_ids.py  torch_utils.py  type_conversions.py
(+435 files in other folders)
