[project]
name = "yucca"
version = "1.0.1"
authors = [
  { name="Sebastian Llambias", email="llambias@live.dk" },
  { name="Asbjørn Munk", email="9844416+asbjrnmunk@users.noreply.github.com" },
  { name="Jakob Ambsdorf", email="20045425+jakobamb@users.noreply.github.com" },
]
description = "The modern framework for out-of-the box machine Learning on medical data."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ['deep learning', 'image segmentation', 'medical image analysis','medical image segmentation']

dependencies = [
    "batchgenerators>=0.23",
    "connected_components_3d>=3.12.4",
    "flake8-unused-arguments>=0.0.13",
    "fvcore>=0.1.5",
    "lightning>=2.2.1",
    "matplotlib>=3.8.3",
    "monai>=1.3.0",
    "nibabel>=5.2.1",
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "python-dotenv==1.0.0",
    "scikit_image>=0.22.0",
    "scikit_learn>=1.4.1.post1",
    "seaborn>=0.13.2",
    "SimpleITK>=2.3.1",
    "tqdm>=4.66.2",
    "timm>=0.9.8",
    "torchmetrics>=1.3.0",
    "wandb>=0.16.3",
    "weave>=0.39.0",
]


[project.optional-dependencies]
test = [
    'pytest>=7.3',
    'flake8>=6.1.0',
    'black>=23.10.1',
    'mypy>=1.6.0',
]

[project.scripts]
yucca_preprocess = 'yucca.run.run_preprocessing:main'
yucca_train = 'yucca.run.run_training:main'
yucca_inference = 'yucca.run.run_inference:main'
yucca_evaluation = 'yucca.run.run_evaluation:main'
yucca_finetune = 'yucca.run.run_finetune:main'
yucca_convert_task = 'yucca.run.run_task_conversion:main'
yucca_ensemble = 'yucca.run.run_ensemble:main'

[project.urls]
"Homepage" = "https://github.com/sllambias/yucca"
"Bug Tracker" = "https://github.com/sllambias/yucca/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 127

